# alexs-visualisation-tools

./: .gitignore  README.md  README.txt  pyproject.toml  setup.py
avt/: __init__.py  __version__.py  _boxplot.py  _catplot.py  _lineplot.py  _matrix.py  _matrixplot.py  _metric_displays.py  _save_fig.py  _scatterplot.py  _theme.py  _utils.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  documentation.rst  index.rst  usage.rst
examples/: catplot.ipynb  lineplot.ipynb  matrix.ipynb  metric_displays.ipynb  scatterplot.ipynb
